--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "carering",
   "version": "0.0.1",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.10.1",
     "express": "4.10.x",
     "mysql": "^2.5.4"
