--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
 	"mysql": {
-		"host":"",
-		"user": "",
-		"password": "",
-		"database": ""
+		"host":"us-cdbr-iron-east-01.cleardb.net",
+		"user": "b7ee22e8262e20",
+		"password": "bb0b1629",
+		"database": "heroku_808167838bb623f"
 	}
 }
